# RouteAnalytics

./: MANIFEST.in  README.md  pyproject.toml
src/route_analytics/: __init__.py  animation.py  inference.py  models_io.py
src/route_analytics/models/: route_features.json  route_label_mapping.json  route_model.json
