[project]
name = "route-analytics"
version = "0.1.4"
description = "Route-level prediction, WR/CB matchup analysis, and animation tools for NFL tracking data."
requires-python = "==3.11.*"

authors = [
  { name = "Virochan Pandit" }
]

readme = "README.md"

dependencies = [
    "pandas==2.2.0",
    "numpy==1.26.2",
    "xgboost==3.0.5",
    "matplotlib==3.8.2",
    "pillow==10.1.0",
    "scipy==1.12.0"
]

[project.urls]
Homepage = "https://github.com/vp655/RavensRoutePackage"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ravens_route = [
    "models/route_model.json",
    "models/route_features.json",
    "models/route_label_mapping.json"
]

[tool.setuptools.packages.find]
where = ["src"]
